libs/@local/hashql/hir/tests/ui/lower/checking/type-assertion-smaller.jsonc
//@ run: fail
//@ description: Test that input inference for the default works
["is", { "#literal": 42.12 }, "Integer"] // checking DOWN fails
//~^ ERROR Type mismatch in this expression
